# processador-de-consultas

./: LICENSE  README.md  processador-de-consultas.cabal
app/: Main.hs  Sql.hs  Test.hs
app/Database/: Schema.hs
app/RA/: Converter.hs  Types.hs
app/Sql/: Data.hs  Examples.hs  Parser.hs  Types.hs  Validator.hs
