cabal-version: 3.0

name:          processador-de-consultas
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        ludihan
build-type:    Simple
extra-doc-files: 
    README.md

executable processador-de-consultas
    main-is:          Main.hs
    other-modules:
        Sql.Parser,
        Sql.Types,
        Sql.Examples,
        RA.Types,
        RA.Converter,
        Database.Schema,
        Test

    build-depends:
        base ^>=4.18.3.0,
        monomer,
        lens,
        text-show,
        megaparsec

    ghc-options:      -Wall
    hs-source-dirs:   app
    default-language: Haskell2010
